--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="contacto.html">Contacto</a>
+    <h1>Control de Versiones</h1>
+    <a href="contacto.html">Texto</a>
 </body>
 </html>
